--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="div">
     <h1 id="head">Guess the number!</h1><br><br><br><hr id="line1">
-<input id="guessnumber" placeholder="Guess a number"><br><br>
+<input id="guessnumber" placeholder="Guess a number"  min="1" max="10"><br><br>
 <button onclick="check()">check</button>
 <p id="result">Right Or Wrong</p>
 <p id="totalscore">score:5</p>
@@ -18,7 +18,7 @@
 <hr id="line">
 <p id="endtex">Devoloped by karthi_kn <br> Share it with your friends</p>
 
-
+</div>
 <script>
     var guessnumber = document.getElementById("guessnumber")
     var result = document.getElementById("result")
